--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,3 +7,10 @@ data_ingestion:
   unzip_dir: artifacts/data_ingestion 
 
 
+prepare_base_model:
+  root_dir: artifacts/prepare_base_model
+  base_model_path: artifacts/prepare_base_model/base_model.keras
+  updated_base_model_path: artifacts/prepare_base_model/base_model_updated.keras
+
+
+  
